qwen-tts-ascend-sys/target/debug/build/qwen-tts-ascend-sys-574ee33d32e28e0b/out/bindings.rs

/* automatically generated by rust-bindgen 0.72.1 */

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct qwen_tts_ctx {
    _unused: [u8; 0],
}
pub type qwen_tts_ctx_t = qwen_tts_ctx;
unsafe extern "C" {
    #[doc = " Load all TTS models from a GGUF directory.\n\n model_dir: directory containing qwen_tts_talker.gguf, qwen_tts_talker_llama*.gguf,\n            qwen_tts_code_predictor.gguf, qwen_tts_tokenizer_*.gguf,\n            qwen_tts_speaker_encoder.gguf (optional), vocab.json, merges.txt\n tokenizer_dir: directory with vocab.json + merges.txt (NULL = same as model_dir)\n talker_override: override talker llama GGUF path (NULL = auto from model_dir)\n cp_override: override code predictor llama GGUF path (NULL = auto)\n n_gpu_layers: layers to offload to NPU (29 = all for 1.7B)\n n_threads: CPU threads\n\n Returns: context handle, or NULL on failure."]
    pub fn qwen_tts_load(
        model_dir: *const ::std::os::raw::c_char,
        tokenizer_dir: *const ::std::os::raw::c_char,
        talker_override: *const ::std::os::raw::c_char,
        cp_override: *const ::std::os::raw::c_char,
        n_gpu_layers: ::std::os::raw::c_int,
        n_threads: ::std::os::raw::c_int,
    ) -> *mut qwen_tts_ctx_t;
}
unsafe extern "C" {
    #[doc = " Free all resources."]
    pub fn qwen_tts_free(ctx: *mut qwen_tts_ctx_t);
}
unsafe extern "C" {
    #[doc = " Get model hidden size (typically 2048)."]
    pub fn qwen_tts_hidden_size(ctx: *const qwen_tts_ctx_t) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " Get codec vocabulary size (typically 3072)."]
    pub fn qwen_tts_vocab_size(ctx: *const qwen_tts_ctx_t) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " Check if speaker encoder is loaded (Base model only)."]
    pub fn qwen_tts_has_speaker_encoder(ctx: *const qwen_tts_ctx_t) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " Compute text_proj(text_embed(token_id)).\n out: buffer of size hidden_size."]
    pub fn qwen_tts_text_embed(ctx: *mut qwen_tts_ctx_t, token_id: u32, out: *mut f32);
}
unsafe extern "C" {
    #[doc = " Lookup raw codec embedding (no projection).\n out: buffer of size hidden_size."]
    pub fn qwen_tts_codec_embed(ctx: *mut qwen_tts_ctx_t, codec_token: u32, out: *mut f32);
}
unsafe extern "C" {
    #[doc = " Apply codec_head to hidden state → logits.\n hidden: [hidden_size], logits_out: [vocab_size]"]
    pub fn qwen_tts_codec_head(ctx: *mut qwen_tts_ctx_t, hidden: *const f32, logits_out: *mut f32);
}
unsafe extern "C" {
    #[doc = " Compute generation embedding: sum of 16 codec group embeddings for prev frame + text.\n text_embed: [hidden_size] (pre-computed text_proj)\n prev_codes: [16] codec values from previous frame\n out: [hidden_size]"]
    pub fn qwen_tts_generation_embed(
        ctx: *mut qwen_tts_ctx_t,
        text_embed: *const f32,
        prev_codes: *const u32,
        out: *mut f32,
    );
}
unsafe extern "C" {
    #[doc = " Reset KV cache (call before each new generation)."]
    pub fn qwen_tts_reset_cache(ctx: *mut qwen_tts_ctx_t);
}
unsafe extern "C" {
    #[doc = " Forward pass through the 28-layer transformer backbone.\n\n input_embeds: [seq_len * hidden_size] flat f32\n seq_len: number of positions\n logits_out: [vocab_size] logits from LAST position (after codec_head)\n hidden_out: [hidden_size] hidden state from LAST position\n\n Returns 0 on success, non-zero on error."]
    pub fn qwen_tts_forward(
        ctx: *mut qwen_tts_ctx_t,
        input_embeds: *const f32,
        seq_len: ::std::os::raw::c_int,
        logits_out: *mut f32,
        hidden_out: *mut f32,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " Generate sub-codes (codebooks 1-15) from hidden state + code0.\n\n hidden: [hidden_size] from transformer output\n code0: group 0 token\n codes_out: buffer of size 15 (groups 1-15)\n\n Returns 0 on success."]
    pub fn qwen_tts_predict_codes(
        ctx: *mut qwen_tts_ctx_t,
        hidden: *const f32,
        code0: u32,
        codes_out: *mut u32,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " Decode codec frames to audio waveform.\n\n codes: [n_frames * n_groups] flat u32 (row-major: frame0_g0, frame0_g1, ..., frame1_g0, ...)\n n_frames: number of codec frames\n n_groups: codebook groups (16)\n audio_out: output buffer (caller allocates, recommend n_frames * 1920 floats)\n n_samples_out: actual number of audio samples written\n\n Returns 0 on success."]
    pub fn qwen_tts_decode_audio(
        ctx: *mut qwen_tts_ctx_t,
        codes: *const u32,
        n_frames: ::std::os::raw::c_int,
        n_groups: ::std::os::raw::c_int,
        audio_out: *mut f32,
        n_samples_out: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " Extract speaker embedding from reference audio.\n\n audio: f32 samples at sample_rate Hz\n n_samples: number of samples\n sample_rate: audio sample rate (24000 recommended)\n embedding_out: buffer of size hidden_size (typically 2048)\n\n Returns 0 on success, -1 if speaker encoder not loaded."]
    pub fn qwen_tts_extract_speaker(
        ctx: *mut qwen_tts_ctx_t,
        audio: *const f32,
        n_samples: ::std::os::raw::c_int,
        sample_rate: ::std::os::raw::c_int,
        embedding_out: *mut f32,
    ) -> ::std::os::raw::c_int;
}
#[doc = " Parameters for qwen_tts_synthesize().\n\n Mirrors the fields of QwenTTSParams (see qwen_tts.h) actually consumed by\n QwenTTS::generate() / generate_xvec() / generate_customvoice(). Callers\n construct, fill, and pass by pointer; the library never retains it past\n the synthesize() call.\n\n Zero-defaulted sampling fields use the same defaults as the qwen_tts\n CLI / Python reference (documented per-field below). Set any field to\n its \"use default\" sentinel to fall through."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct qwen_tts_synth_params_t {
    pub text: *const ::std::os::raw::c_char,
    pub ref_audio_path: *const ::std::os::raw::c_char,
    pub ref_text: *const ::std::os::raw::c_char,
    pub ref_lang: *const ::std::os::raw::c_char,
    pub target_lang: *const ::std::os::raw::c_char,
    pub mode: *const ::std::os::raw::c_char,
    pub speaker: *const ::std::os::raw::c_char,
    pub seed: ::std::os::raw::c_int,
    pub max_tokens: ::std::os::raw::c_int,
    pub temperature: f32,
    pub top_k: ::std::os::raw::c_int,
    pub top_p: f32,
    pub repetition_penalty: f32,
    pub cp_groups: ::std::os::raw::c_int,
    pub cp_layers: ::std::os::raw::c_int,
    pub greedy: ::std::os::raw::c_int,
}
unsafe extern "C" {
    #[doc = " One-shot text-to-speech synthesis.\n\n Dispatches by params->mode to QwenTTS::generate() (ICL),\n generate_xvec(), or generate_customvoice(). The library allocates the\n output PCM buffer via malloc() (size is unknown up front); the caller\n MUST release it with qwen_tts_pcm_free().\n\n pcm_out:       [out] pointer receiving the malloc()'d f32 buffer (24kHz mono)\n n_samples_out: [out] number of float samples written\n\n Returns 0 on success. On any error, *pcm_out is set to NULL and\n *n_samples_out is set to 0. Error codes:\n   -1: ctx or params was NULL\n   -2: unknown mode\n   -3: generation failed inside QwenTTS::generate*"]
    pub fn qwen_tts_synthesize(
        ctx: *mut qwen_tts_ctx_t,
        params: *const qwen_tts_synth_params_t,
        pcm_out: *mut *mut f32,
        n_samples_out: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " Release a PCM buffer returned by qwen_tts_synthesize().\n\n Equivalent to free(pcm). Safe to call with NULL (no-op)."]
    pub fn qwen_tts_pcm_free(pcm: *mut f32);
}
